--- a/app.json
+++ b/app.json
@@ -6,9 +6,9 @@
 "articleUrl":"http://software.intel.com/en-us/articles/intel-xdk-simple-camera-sample",
 "keywords":["intel.xdk","demo","accelerometer","orientation"],
 "visible" : "false",
-"highlights" : ["demo","accelerometer"],
+"highlights" : ["Image Capture", "intel.xdk API"],
 "visible" : "true",
-"highlights" : ["demo","camera"]
+"highlights" : ["Image Capture", "intel.xdk API"]
 "apppreview":"false",
 "appname":"demo.camera",
 "relname":"4.0.0"
