--- a/app.json
+++ b/app.json
@@ -5,10 +5,10 @@
 "description":"This demonstration illustrates how to use the camera features of hybrid apps built using the Intel&reg; XDK.",
 "articleUrl":"http://software.intel.com/en-us/articles/intel-xdk-simple-camera-sample",
 "keywords":["intel.xdk","demo","accelerometer","orientation"],
-"visible" : "false",
+"visible" : "true",
 "highlights" : ["Image Capture", "intel.xdk API"],
 "visible" : "true",
-"highlights" : ["Image Capture", "intel.xdk API"]
+"highlights" : ["Image Capture", "intel.xdk API"],
 "apppreview":"false",
 "appname":"demo.camera",
 "relname":"4.0.0"
