Update keywords attr

--- a/app.json
+++ b/app.json
@@ -4,9 +4,8 @@
 "tooltip":"A demonstration of how to use the Intel XDK Camera commands to take a picture",
 "description":"This demonstration illustrates how to use the camera features of hybrid apps built using the Intel&reg; XDK.",
 "articleUrl":"http://software.intel.com/en-us/articles/intel-xdk-simple-camera-sample",
-"keywords":["intel.xdk","demo","accelerometer","orientation"],
 "visible" : "true",
-"highlights" : ["Image Capture", "intel.xdk API"],
+"keywords" : ["Image Capture", "intel.xdk API"],
 "visible" : "true",
 "highlights" : ["Image Capture", "intel.xdk API"],
 "apppreview":"true",
