--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 "reponame":"sample-Camera",
 "title":"Camera",
 "tooltip":"A demonstration of how to use the Intel XDK Camera commands to take a picture",
-"description":"This demonstration illustrates how to use the camera features of hybrid apps built using the Intel&reg; XDK.",
+"description":"This demonstration illustrates how to use the camera features of hybrid apps built using the Intel XDK.",
 "articleUrl":"http://software.intel.com/en-us/articles/intel-xdk-simple-camera-sample",
 "visible" : "true",
 "keywords" : ["Image Capture", "intel.xdk API"],
