update projectTypeName string

--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
 "highlights" : ["Image Capture", "intel.xdk API"],
 "apppreview":"true",
 "appname":"demo.camera",
-"relname":"4.0.0"
+"relname":"4.0.0",
+"projectTypeName": "com.intel.xdk.projecttype.jsapp"
 }
 
 
