--- a/app.json
+++ b/app.json
@@ -1,17 +1,21 @@
 {
-"repoName":"sample-image-capture",
-"title":"Image Capture",
-"tooltip":"A demonstration of how to use the Intel XDK Camera commands to take a picture",
-"description":"This demonstration illustrates how to use the camera features of hybrid apps built using the Intel XDK.",
-"articleUrl":"http://software.intel.com/en-us/articles/intel-xdk-simple-camera-sample",
-"visible" : "true",
-"keywords" : ["Image Capture", "intel.xdk API"],
-"visible" : "true",
-"highlights" : ["Image Capture", "intel.xdk API"],
-"apppreview":"true",
-"appname":"demo.camera",
-"relname":"4.0.0",
-"projectTypeName": "com.intel.xdk.projecttype.jsapp"
+   "relName" : "4.0.0",
+   "articleUrl" : "http://software.intel.com/en-us/articles/intel-xdk-simple-camera-sample",
+   "highlights" : [
+      "Image Capture",
+      "intel.xdk API"
+   ],
+   "projectTypeName" : "com.intel.xdk.projecttype.jsapp",
+   "description" : "This demonstration illustrates how to use the camera features of hybrid apps built using the Intel XDK.",
+   "appPreview" : true,
+   "repoName" : "sample-image-capture",
+   "visible" : true,
+   "tooltip" : "A demonstration of how to use the Intel XDK Camera commands to take a picture",
+   "appName" : "demo.camera",
+   "title" : "Image Capture",
+   "mobile" : false,
+   "keywords" : [
+      "Image Capture",
+      "intel.xdk API"
+   ]
 }
-
-
