--- a/app.json
+++ b/app.json
@@ -1,20 +1,21 @@
 {
-   "keywords" : [
-      "Image Capture",
-      "intel.xdk API"
-   ],
-   "visible" : "true",
-   "appPreview" : "true",
-   "tooltip" : "A demonstration of how to use the Intel XDK Camera commands to take a picture",
+   "relName" : "4.0.0",
    "articleUrl" : "http://software.intel.com/en-us/articles/intel-xdk-simple-camera-sample",
    "highlights" : [
       "Image Capture",
       "intel.xdk API"
    ],
-   "repoName" : "sample-image-capture",
-   "relName" : "4.0.0",
-   "appName" : "demo.camera",
    "projectTypeName" : "com.intel.xdk.projecttype.jsapp",
+   "description" : "This demonstration illustrates how to use the camera features of hybrid apps built using the Intel XDK.",
+   "appPreview" : true,
+   "repoName" : "sample-image-capture",
+   "visible" : true,
+   "tooltip" : "A demonstration of how to use the Intel XDK Camera commands to take a picture",
+   "appName" : "demo.camera",
    "title" : "Image Capture",
-   "description" : "This demonstration illustrates how to use the camera features of hybrid apps built using the Intel XDK."
+   "mobile" : false,
+   "keywords" : [
+      "Image Capture",
+      "intel.xdk API"
+   ]
 }
