--- a/app.json
+++ b/app.json
@@ -1,21 +1,15 @@
 {
-   "relName" : "4.0.0",
-   "articleUrl" : "http://software.intel.com/en-us/articles/intel-xdk-simple-camera-sample",
-   "highlights" : [
-      "Image Capture",
-      "intel.xdk API"
-   ],
-   "projectTypeName" : "com.intel.xdk.projecttype.jsapp",
-   "description" : "This demonstration illustrates how to use the camera features of hybrid apps built using the Intel XDK.",
-   "appPreview" : true,
-   "repoName" : "sample-image-capture",
-   "visible" : true,
-   "tooltip" : "A demonstration of how to use the Intel XDK Camera commands to take a picture",
-   "appName" : "demo.camera",
-   "title" : "Image Capture",
-   "mobile" : false,
-   "keywords" : [
-      "Image Capture",
-      "intel.xdk API"
-   ]
+  "title" : "Image Capture",
+  "projectTypeName" : "com.intel.xdk.projecttype.jsapp",
+  "sample" : true,
+  "template" : false,
+  "visible" : true,
+  "sortWeight" : "0.0",
+  "repoName" : "sample-image-capture",
+  "tooltip" : "Use device camera to take a picture",
+  "description" : "This sample application illustrates how to use the camera features of a hybrid mobile Cordova app.",
+  "articleUrl" : "http://software.intel.com/en-us/articles/intel-xdk-simple-camera-sample",
+  "keywords" : ["Image Capture","Cordova"],
+  "targets" : [""],
+  "runtimes" : [""]
 }
